Fixes alignment of Dashboard stats.

--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding-top: 12px;
+    align-items: center;
 }
 
 .Dashboard .Control_container {
